--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,7 @@
 	<modules>
 		<module>school-service</module>
 		<module>school-ui</module>
+		<module>discovery</module>
+		<module>config</module>
 	</modules>
 </project>
