--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '3'
 services:
+  parent-pom:
+    build:
+      context: .
+      dockerfile: Dockerfile
   discovery:
     image: developer.okta.com/microservice-docker-discovery:0.0.1-SNAPSHOT
     networks: # Networks to join (Services on the same network can communicate with each other using their name)
