--- a/discovery/pom.xml
+++ b/discovery/pom.xml
@@ -17,6 +17,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Hoxton.SR4</spring-cloud.version>
+		<docker.image.prefix>docker.io/ahmetkayar</docker.image.prefix>
 	</properties>
 
 	<dependencies>
@@ -80,8 +81,9 @@
 					</execution>
 				</executions>
 				<configuration>
-					<repository>developer.okta.com/microservice-docker-${project.artifactId}</repository>
+					<repository>${docker.image.prefix}/${project.artifactId}</repository>
 					<tag>${project.version}</tag>
+					<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
 					<buildArgs>
 						<JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
 					</buildArgs>
