--- a/school-service/pom.xml
+++ b/school-service/pom.xml
@@ -22,6 +22,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
+		<docker.image.prefix>docker.io/ahmetkayar</docker.image.prefix>
 	</properties>
 
 	<dependencies>
@@ -75,8 +76,9 @@
 					</execution>
 				</executions>
 				<configuration>
-					<repository>developer.okta.com/microservice-docker-${project.artifactId}</repository>
+					<repository>${docker.image.prefix}/${project.artifactId}</repository>
 					<tag>${project.version}</tag>
+					<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
 					<buildArgs>
 						<JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
 					</buildArgs>
