--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
   school-ui:
     image: ms-school-ui:v1
     networks: # Networks to join (Services on the same network can communicate with each other using their name)
-      - local_proxy
+      - proxy
     environment:
       - JAVA_OPTS=
         -DEUREKA_SERVER=http://discovery:8761/eureka
